--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello World" 
+<!DOCTYPE html>
+<head>
+    <title>Sample HTML Page</title>
+</head>
+<body style = "background-color: green;">
+    This is just ordinary text.
+    <i>This is italicized text.</i>
+    <br>
+    <p style = "text-align: center;">This is a centered paragraph</p>
+    <a href = "http://ece.utexas.edu/~meberlein">Visit my webpage!</a>
+    <img src = "puppy.jpg" width = "500" height = "600"> 
+</body>
+</html>
