--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Sample HTML Page</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta description="Hyun Joon Song's 461L Homework 5 Website">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <title>EE 461L Homework 5</title>
 </head>
-<body style = "background-color: green;">
-    This is just ordinary text.
-    <i>This is italicized text.</i>
-    <br>
-    <p style = "text-align: center;">This is a centered paragraph</p>
-    <a href = "http://ece.utexas.edu/~meberlein">Visit my webpage!</a>
-    <img src = "puppy.jpg" width = "500" height = "600"> 
+<body>
+    <div class="rows">
+        <div class="top-row">
+            <a href="https://google.com">
+                <img src="images/logo.svg" alt="Google Link">
+            </a>
+        </div>
+        <div class="bottom-row">
+            <a id=color-change href="https://www.w3schools.com/w3css/defaulT.asp">
+                Hello World!
+            </a>
+        </div>
+    </div>        
 </body>
 </html>
